update DOM project

--- a/index.html
+++ b/index.html
@@ -4,11 +4,23 @@
     <meta charset="UTF-8" />
     <title>Guessing Game</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <!-- the style.css file is linked here -->
   </head>
 
   <body>
     <!-- <script src='js/guessing-game.js'></script> -->
     <!-- uncomment the script tag above when you are ready to add JavaScript to your document -->
+    <h1>Guessing Game</h1>
+
+    <div id="container1">
+      <p>Guess a number between 1 and 100</p>
+    </div>
+
+    <div id="container2">
+      <p>Testing Text</p>
+    </div>
   </body>
 </html>
